Changed div so other can also play hard version of game

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
         <!-- Upcoming Car from front/UP -->
         <div id="opps"></div>
-        <div style="display: none; background-color: #fff;" id="opps2"></div>
+        <!-- <div style="display: none; background-color: #fff;" id="opps2"></div> -->
+        <div id="opps2"></div>
 
         <!-- User's Car -->
         <div id="car"></div>
